frontend: overflow  fix and border-radius changes

--- a/frontend/src/components/Answers/Answers.css
+++ b/frontend/src/components/Answers/Answers.css
@@ -1,30 +1,34 @@
 .answer {
-    background-color: #1aa395;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    padding: 20px;
-    margin-bottom: 20px;
-    width: auto;
-  }
+  background-color: #1aa395;
+  border-radius: 0 0 8px 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+  margin-bottom: 20px;
+  width: auto;
+}
 
 
 .answer p {
-    font-size: 16px;
-    margin-bottom: 10px;
-    border-color: bisque;
-    border: solid 1px;
-  }
-  
-  .answer button {
-    background-color: #007bff;
-    color: #ffffff;
-    border: none;
-    padding: 8px 16px;
-    font-size: 14px;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-  
-  .answer button:hover {
-    background-color: #0056b3;
-  }
+  font-size: 16px;
+  margin-bottom: 10px;
+  border-color: bisque;
+  border: solid 1px;
+  overflow: auto;
+  word-wrap: break-word;
+  word-break: break-all;
+}
+
+
+.answer button {
+  background-color: #007bff;
+  color: #ffffff;
+  border: none;
+  padding: 8px 16px;
+  font-size: 14px;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.answer button:hover {
+  background-color: #0056b3;
+}
