--- a/frontend/src/components/Questions/Questions.css
+++ b/frontend/src/components/Questions/Questions.css
@@ -1,9 +1,9 @@
 .question {
   background-color: #1aa395;
-  border-radius: 8px;
+  border-radius: 8px 8px 0 0;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   padding: 20px;
-  margin-bottom: 20px;
+  margin-bottom: 0px;
   width: auto;
 }
 
